--- a/settings.cfg
+++ b/settings.cfg
@@ -1,5 +1,5 @@
-// Updated: 18/07/23
-// Launch Command: -dev -preload -high -novid -dxlevel95 +fps_max 400
+// Updated: 16/12/23
+// Launch Command: -dev -preload -high -dxlevel95 +exec fps_boost.cfg
 // Stretched Res Launch Command: +mat_letterbox_aspect_goal 0 +mat_letterbox_aspect_threshold 0 +building_cubemaps "1"
 // NOTE: Stretched press ALT + ENTER after starting the game!!!!!
 // Mouse DPI: 2400
