--- a/settings.cfg
+++ b/settings.cfg
@@ -43,10 +43,10 @@ bind_US_standard 		"w" 			"weapon_inspect" 			0	// Weapon Inspection
 bind_US_standard 		"s" 			"+scriptcommand3" 			0	// Cycle Fire Mode
 
 // communicate keybinds.
-bind_US_standard 		"F3" 			"chat_wheel" 				0
+bind_US_standard 		"F3" 			"chat_wheel" 				0	// Emote Key
 bind_US_standard 		"MOUSE3" 		"+ping" 					0
-bind_US_standard 		"ENTER" 		"say_team" 					0
-// bind_US_standard 		"LSHIFT" 		"+pushtotalk" 				0
+bind_US_standard 		"ENTER" 		"say_team" 					0	// Chat key
+// bind_US_standard 	"LSHIFT" 		"+pushtotalk" 				0	// Microphone key
 
 // other keybinds.
 bind_US_standard 		"ESCAPE" 		"ingamemenu_activate" 		0
