--- a/settings.cfg
+++ b/settings.cfg
@@ -43,7 +43,7 @@ bind_US_standard 		"w" 			"weapon_inspect" 			0	// Weapon Inspection
 bind_US_standard 		"s" 			"+scriptcommand3" 			0	// Cycle Fire Mode
 
 // communicate keybinds.
-bind_US_standard 		"F3" 			"chat_wheel" 				0	// Emote Key
+bind_US_standard 		"2" 			"chat_wheel" 				0	// Emote Key | F3 -> For keyboard with F3 keys | 2 -> For keyboard without F3 keys
 bind_US_standard 		"MOUSE3" 		"+ping" 					0
 bind_US_standard 		"ENTER" 		"say_team" 					0	// Chat key
 // bind_US_standard 	"LSHIFT" 		"+pushtotalk" 				0	// Microphone key
