--- a/fps_boost.cfg
+++ b/fps_boost.cfg
@@ -1,4 +1,4 @@
-// Updated: 16/12/23
+// Updated: 21/12/23
 // Launch Command: -dev -preload -high -dxlevel95 +exec fps_boost.cfg
 // Stretched Res Launch Command: +mat_letterbox_aspect_goal 0 +mat_letterbox_aspect_threshold 0 +building_cubemaps "1"
 // NOTE: Stretched press ALT + ENTER after starting the game!!!!!
@@ -33,30 +33,19 @@ laserSightColor 							"1162962"		// Laser sight color ID
 laserSightColorCustomized 					"1"				// Enable custom laser sight colors 
 
 // Audio---------------------------------------------------------
-sound_volume								"0.4"			// In-game sound volume | 0.4 = 40%
+sound_volume								"1"				// In-game sound volume | 0.4 = 40% | 1 = 100%
 sound_volume_dialogue						"0.08"			// Character dialogue volume | 0.08 = 5%
 sound_volume_music_lobby					"0"				// Lobby music volume | 0 = OFF
 sound_volume_music_game						"0"				// Game music volume | 0 = OFF
 sound_volume_sfx							"1"				// Game sound effects | 1 = 100%
 sound_without_focus 						"1"				// Game does not stop to play sound when tabbed out
 sound_num_speakers 							"8"				// Number of your audio channels | 8 = surround sound
+miles_channels 								"8"				// Tells the number of audio channels to the audio engine, try 8 if ur using one of those fake 7.1 headsets
+snd_surround_speakers 						"8"
+snd_headphone_pan_exponent 					"8"
 sound_volume_voice 							"1"
 TalkIsStream 								"0"
 voice_forcemicrecord 						"0"				// Denys recording of comms to the server
-
-// credit: https://www.youtube.com/watch?v=RHXTMEfHjas&t=185s
-// Audio-Fix-----------------------------------------------------
-miles_occlusion_server_sounds_per_frame 	"200"
-miles_occlusion 							"0"
-miles_occlusion_force 						"0"
-miles_occlusion_partial 					"0"
-miles_channels 								"8"				// Tells the number of audio channels to the audio engine, try 8 if ur using one of those fake 7.1 headsets
-snd_mixahead 								"0.05"
-snd_surround_speakers 						"8"
-snd_headphone_pan_exponent 					"8"
-snd_musicvolume 							"0"
-snd_setmixer_PlayerFootsteps_vol 			"0.1"
-snd_setmixer_GlobalFootsteps_vol			"1.2"
 
 // PRIVACY-SETTINGS----------------------------------------------
 telemetry_client_enable 					"0"				// Disables EA Telemetry
@@ -65,7 +54,7 @@ pin_opt_in 									"0"				// Opts out of Respawn Data surveys
 pin_plat_id 								"0"				// Opts out of Respawn Data surveys
 
 // GRAPHICS-BASED-COMMANDS---------------------------------------
-fps_max 									"0"				// Set Max Framerate Limit | 0 = Unlocks Framerate
+fps_max 									"400"			// Set Max Framerate Limit | 0 = Unlocks Framerate
 noise_filter_scale 							"0"				// Removes Film-grain
 cl_ragdoll_maxcount 						"0"				// Disables Ragdoll
 cl_ragdoll_self_collision 					"0"
