--- a/settings.cfg
+++ b/settings.cfg
@@ -1,4 +1,4 @@
-// Updated: 16/12/23
+// Updated: 16/02/24
 // Launch Command: -dev -preload -high -dxlevel95 +exec fps_boost.cfg
 // Stretched Res Launch Command: +mat_letterbox_aspect_goal 0 +mat_letterbox_aspect_threshold 0 +building_cubemaps "1"
 // NOTE: Stretched press ALT + ENTER after starting the game!!!!!
@@ -7,43 +7,43 @@
 
 // movement keybinds.
 bind_US_standard 		"MWHEELUP" 		"+forward" 					1	// "+use; +forward"
-bind_US_standard 		"r" 			"+forward" 					0
-bind_US_standard 		"f" 			"+backward" 				0
-bind_US_standard 		"d" 			"+moveleft" 				0
-bind_US_standard 		"g" 			"+moveright" 				0
-bind_US_standard 		"c" 			"+speed" 					0 	// Active sprint & Scope zoom
+bind_US_standard 		"t" 			"+forward" 					0
+bind_US_standard 		"g" 			"+backward" 				0
+bind_US_standard 		"f" 			"+moveleft" 				0
+bind_US_standard 		"h" 			"+moveright" 				0
+bind_US_standard 		"z" 			"+speed" 					0 	// Active sprint & Scope zoom
 bind_US_standard 		"SPACE" 		"+jump" 					0
 bind_US_standard 		"MWHEELDOWN" 	"+jump" 					1
-bind_US_standard 		"z" 			"+duck" 					0
-bind_US_standard 		"n" 			"+duck" 					1
+bind_US_standard 		"x" 			"+duck" 					0
+bind_US_standard 		"m" 			"+duck" 					1
 
 // combat keybinds.
-bind_US_standard 		"b" 			"+offhand1" 				0 	// Tactical ability
-bind_US_standard 		"h" 			"+offhand4" 				0 	// Ultimate ability
-bind_US_standard 		"t" 			"+use; +use_long" 			0	// Interact
-bind_US_standard 		"LSHIFT" 		"+use_alt" 					0	// Alternative Interact
-bind_US_standard 		"e" 			"toggle_inventory" 			0
-bind_US_standard 		"m" 			"toggle_map" 				0
+bind_US_standard 		"n" 			"+offhand1" 				0 	// Tactical ability
+bind_US_standard 		"k" 			"+offhand4" 				0 	// Ultimate ability
+bind_US_standard 		"y" 			"+use; +use_long" 			0	// Interact
+bind_US_standard 		"u" 			"+use_alt" 					0	// Alternative Interact
+bind_US_standard 		"r" 			"toggle_inventory" 			0
+bind_US_standard 		"," 			"toggle_map" 				0
 bind_US_standard 		"MOUSE1" 		"+attack" 					0
 bind_US_standard 		"MOUSE2" 		"+zoom" 					0
 bind_US_standard 		"MOUSE4" 		"+melee" 					0
-bind_US_standard 		"y" 			"+reload" 					0
-bind_US_standard 		"3" 			"weaponSelectPrimary0" 		0
-bind_US_standard 		"4" 			"weaponSelectPrimary1" 		0
-bind_US_standard 		"5" 			"weaponSelectPrimary2" 		0
+// bind_US_standard 	"y" 			"+reload" 					0
+bind_US_standard 		"4" 			"weaponSelectPrimary0" 		0
+bind_US_standard 		"5" 			"weaponSelectPrimary1" 		0
+bind_US_standard 		"6" 			"weaponSelectPrimary2" 		0
 
 // misc keybinds.
-bind_US_standard 		"6" 			"weaponSelectOrdnance" 		0 	// Select/cycle ordnance
-bind_held_US_standard   "6"             "+strafe"                   0	// Ordnance wheel (hold)
-bind_US_standard 		"a" 			"+scriptCommand6" 			0 	// Gadget wheel
+bind_US_standard 		"7" 			"weaponSelectOrdnance" 		0 	// Select/cycle ordnance
+bind_held_US_standard   "7"             "+strafe"                   0	// Ordnance wheel (hold)
+bind_US_standard 		"s" 			"+scriptCommand6" 			0 	// Gadget wheel
 bind_US_standard        "MOUSE5"        "+scriptCommand4"           0	// Smart heal
 bind_held_US_standard   "MOUSE5"        "+scriptCommand2"           0	// Medpack wheel (hold)
-bind_US_standard 		"x" 			"+scriptCommand5" 			0 	// Character Utility
-bind_US_standard 		"w" 			"weapon_inspect" 			0	// Weapon Inspection
-bind_US_standard 		"s" 			"+scriptcommand3" 			0	// Cycle Fire Mode
+bind_US_standard 		"l" 			"+scriptCommand5" 			0 	// Character Utility
+bind_US_standard 		"e" 			"weapon_inspect" 			0	// Weapon Inspection
+bind_US_standard 		"d" 			"+scriptcommand3" 			0	// Cycle Fire Mode
 
 // communicate keybinds.
-bind_US_standard 		"2" 			"chat_wheel" 				0	// Emote Key | F3 -> For keyboard with F3 keys | 2 -> For keyboard without F3 keys
+bind_US_standard 		"3" 			"chat_wheel" 				0	// Emote Key | F3 -> For keyboard with F3 keys | 2 -> For keyboard without F3 keys
 bind_US_standard 		"MOUSE3" 		"+ping" 					0
 bind_US_standard 		"ENTER" 		"say_team" 					0	// Chat key
 // bind_US_standard 	"LSHIFT" 		"+pushtotalk" 				0	// Microphone key
