--- a/settings.cfg
+++ b/settings.cfg
@@ -1,4 +1,4 @@
-// Updated: 16/02/24
+// Updated: 19/02/24
 // Launch Command: -dev -preload -high -dxlevel95 +exec fps_boost.cfg
 // Stretched Res Launch Command: +mat_letterbox_aspect_goal 0 +mat_letterbox_aspect_threshold 0 +building_cubemaps "1"
 // NOTE: Stretched press ALT + ENTER after starting the game!!!!!
@@ -11,7 +11,7 @@ bind_US_standard 		"t" 			"+forward" 					0
 bind_US_standard 		"g" 			"+backward" 				0
 bind_US_standard 		"f" 			"+moveleft" 				0
 bind_US_standard 		"h" 			"+moveright" 				0
-bind_US_standard 		"z" 			"+speed" 					0 	// Active sprint & Scope zoom
+bind_US_standard 		"c" 			"+speed" 					0 	// Active sprint & Scope zoom
 bind_US_standard 		"SPACE" 		"+jump" 					0
 bind_US_standard 		"MWHEELDOWN" 	"+jump" 					1
 bind_US_standard 		"x" 			"+duck" 					0
@@ -20,14 +20,14 @@ bind_US_standard 		"m" 			"+duck" 					1
 // combat keybinds.
 bind_US_standard 		"n" 			"+offhand1" 				0 	// Tactical ability
 bind_US_standard 		"k" 			"+offhand4" 				0 	// Ultimate ability
-bind_US_standard 		"y" 			"+use; +use_long; +reload" 	0	// Interact
-bind_US_standard 		"u" 			"+use_alt" 					0	// Alternative Interact
+bind_US_standard 		"y" 			"+use; +use_long; +use_alt" 0	// Interact
+// bind_US_standard 	"u" 			"+use_alt" 					0	// Alternative Interact
 bind_US_standard 		"r" 			"toggle_inventory" 			0
 bind_US_standard 		"," 			"toggle_map" 				0
 bind_US_standard 		"MOUSE1" 		"+attack" 					0
 bind_US_standard 		"MOUSE2" 		"+zoom" 					0
 bind_US_standard 		"MOUSE4" 		"+melee" 					0
-// bind_US_standard 	"y" 			"+reload" 					0
+bind_US_standard 		"u" 			"+reload" 					0
 bind_US_standard 		"4" 			"weaponSelectPrimary0" 		0
 bind_US_standard 		"5" 			"weaponSelectPrimary1" 		0
 bind_US_standard 		"6" 			"weaponSelectPrimary2" 		0
@@ -38,7 +38,7 @@ bind_held_US_standard   "7"             "+strafe"                   0	// Ordnanc
 bind_US_standard 		"s" 			"+scriptCommand6" 			0 	// Gadget wheel
 bind_US_standard        "MOUSE5"        "+scriptCommand4"           0	// Smart heal
 bind_held_US_standard   "MOUSE5"        "+scriptCommand2"           0	// Medpack wheel (hold)
-bind_US_standard 		"l" 			"+scriptCommand5" 			0 	// Character Utility
+bind_US_standard 		"j" 			"+scriptCommand5" 			0 	// Character Utility
 bind_US_standard 		"e" 			"weapon_inspect" 			0	// Weapon Inspection
 bind_US_standard 		"d" 			"+scriptcommand3" 			0	// Cycle Fire Mode
 
