--- a/settings.cfg
+++ b/settings.cfg
@@ -11,7 +11,7 @@ bind_US_standard 		"t" 			"+forward" 					0
 bind_US_standard 		"g" 			"+backward" 				0
 bind_US_standard 		"f" 			"+moveleft" 				0
 bind_US_standard 		"h" 			"+moveright" 				0
-bind_US_standard 		"c" 			"+speed" 					0 	// Active sprint & Scope zoom
+bind_US_standard 		"v" 			"+speed" 					0 	// Active sprint & Scope zoom
 bind_US_standard 		"SPACE" 		"+jump" 					0
 bind_US_standard 		"MWHEELDOWN" 	"+jump" 					1
 bind_US_standard 		"x" 			"+duck" 					0
@@ -19,9 +19,9 @@ bind_US_standard 		"m" 			"+duck" 					1
 
 // combat keybinds.
 bind_US_standard 		"n" 			"+offhand1" 				0 	// Tactical ability
-bind_US_standard 		"k" 			"+offhand4" 				0 	// Ultimate ability
-bind_US_standard 		"y" 			"+use; +use_long; +use_alt" 0	// Interact
-// bind_US_standard 	"u" 			"+use_alt" 					0	// Alternative Interact
+bind_US_standard 		"j" 			"+offhand4" 				0 	// Ultimate ability
+bind_US_standard 		"y" 			"+use; +use_long" 			0	// Interact
+bind_US_standard 		"l" 			"+use_alt" 					0	// Alternative Interact
 bind_US_standard 		"r" 			"toggle_inventory" 			0
 bind_US_standard 		"," 			"toggle_map" 				0
 bind_US_standard 		"MOUSE1" 		"+attack" 					0
@@ -38,9 +38,9 @@ bind_held_US_standard   "7"             "+strafe"                   0	// Ordnanc
 bind_US_standard 		"s" 			"+scriptCommand6" 			0 	// Gadget wheel
 bind_US_standard        "MOUSE5"        "+scriptCommand4"           0	// Smart heal
 bind_held_US_standard   "MOUSE5"        "+scriptCommand2"           0	// Medpack wheel (hold)
-bind_US_standard 		"j" 			"+scriptCommand5" 			0 	// Character Utility
+bind_US_standard 		"k" 			"+scriptCommand5" 			0 	// Character Utility
 bind_US_standard 		"e" 			"weapon_inspect" 			0	// Weapon Inspection
-bind_US_standard 		"d" 			"+scriptcommand3" 			0	// Cycle Fire Mode
+bind_US_standard 		"z" 			"+scriptcommand3" 			0	// Cycle Fire Mode
 
 // communicate keybinds.
 bind_US_standard 		"3" 			"chat_wheel" 				0	// Emote Key | F3 -> For keyboard with F3 keys | 2 -> For keyboard without F3 keys
