--- a/fps_boost.cfg
+++ b/fps_boost.cfg
@@ -19,7 +19,7 @@ hud_setting_damageTextStyle 				"1"				// Damage Numbers Style | 1 = stacking
 hud_setting_pingAlpha 						"0.5"			// Opacity of the pings and downed banners (default 1)
 hud_setting_minimapRotate 					"0"				// This setting allows the minimap to rotate with you (default 0)
 weapon_setting_autocycle_on_empty 			"0"				// This setting allows you to automatically switch to you second weapon, if the mag is empty (default 1)
-damage_indicator_style_pilot 				"0"				// Incoming Damage Feedback | 0 = 2D
+damage_indicator_style_pilot 				"1"				// Incoming Damage Feedback | 0 = 2D | 1 = 3D | 2 = Both
 hud_setting_adsDof 							"0"				// Minimizes ADS Depth of Field (Doesn't remove it compleatly)
 hud_setting_showHopUpPopUp 					"0"
 
