--- a/settings.cfg
+++ b/settings.cfg
@@ -1,4 +1,4 @@
-// Updated: 19/02/24
+// Updated: 30/03/24
 // Launch Command: -dev -preload -high -dxlevel95 +exec fps_boost.cfg
 // Stretched Res Launch Command: +mat_letterbox_aspect_goal 0 +mat_letterbox_aspect_threshold 0 +building_cubemaps "1"
 // NOTE: Stretched press ALT + ENTER after starting the game!!!!!
@@ -12,10 +12,10 @@ bind_US_standard 		"g" 			"+backward" 				0
 bind_US_standard 		"f" 			"+moveleft" 				0
 bind_US_standard 		"h" 			"+moveright" 				0
 bind_US_standard 		"v" 			"+speed" 					0 	// Active sprint & Scope zoom
-bind_US_standard 		"SPACE" 		"+jump" 					0
+bind_US_standard 		"m" 			"+jump" 					0	// Flipped my superglide key
 bind_US_standard 		"MWHEELDOWN" 	"+jump" 					1
 bind_US_standard 		"x" 			"+duck" 					0
-bind_US_standard 		"m" 			"+duck" 					1
+bind_US_standard 		"SPACE" 		"+duck" 					1
 
 // combat keybinds.
 bind_US_standard 		"n" 			"+offhand1" 				0 	// Tactical ability
