--- a/settings.cfg
+++ b/settings.cfg
@@ -1,4 +1,4 @@
-// Updated: 30/03/24
+// Updated: 04/03/24
 // Launch Command: -dev -preload -high -dxlevel95 +exec fps_boost.cfg
 // Stretched Res Launch Command: +mat_letterbox_aspect_goal 0 +mat_letterbox_aspect_threshold 0 +building_cubemaps "1"
 // NOTE: Stretched press ALT + ENTER after starting the game!!!!!
@@ -77,11 +77,15 @@ mouse_zoomed_sensitivity_scalar_6 				"0.68"
 mouse_zoomed_sensitivity_scalar_7 				"0.68"
 
 // sound.
-speex_quiet_threshold 							"1300"
 sv_specaccelerate 								"1000.0"
 sv_specnoclip 									"1"
 sv_specspeed 									"5.0"
 sv_voiceenable 									"1"
+sound_volume_voice                 "1"  // 100% volume
+sound_num_speakers                 "8"
+miles_channels                     "8"
+miles_output_device                 ""
+speex_quiet_threshold 						  "1300"
 voice_input_device 								""
 voice_mixer_boost 								"0"
 voice_mixer_mute 								"0"
