--- a/settings.cfg
+++ b/settings.cfg
@@ -11,7 +11,7 @@ bind_US_standard 		"y" 			"+forward" 					0
 bind_US_standard 		"h" 			"+backward" 				0
 bind_US_standard 		"g" 			"+moveleft" 				0
 bind_US_standard 		"j" 			"+moveright" 				0
-bind_US_standard 		"b" 			"+speed" 					0 	// Active sprint & Scope zoom
+bind_US_standard 		"f" 			"+speed" 					0 	// Active sprint & Scope zoom
 bind_US_standard 		"SPACE" 		"+jump" 					0
 bind_US_standard 		"MWHEELDOWN" 	"+jump" 					1
 bind_US_standard 		"c" 			"+duck" 					0
@@ -38,12 +38,12 @@ bind_held_US_standard   "8"             "+strafe"                   0	// Ordnanc
 bind_US_standard 		"d" 			"+scriptCommand6" 			0 	// Gadget wheel
 bind_US_standard        "MOUSE5"        "+scriptCommand4"           0	// Smart heal
 bind_held_US_standard   "MOUSE5"        "+scriptCommand2"           0	// Medpack wheel (hold)
-bind_US_standard 		"f" 			"+scriptCommand5" 			0 	// Character Utility
+bind_US_standard 		"x" 			"+scriptCommand5" 			0 	// Character Utility
 bind_US_standard 		"r" 			"weapon_inspect" 			0	// Weapon Inspection
-bind_US_standard 		"x" 			"+scriptcommand3" 			0	// Cycle Fire Mode
+bind_US_standard 		"b" 			"+scriptcommand3" 			0	// Cycle Fire Mode
 
 // communicate keybinds.
-bind_US_standard 		"4" 			"chat_wheel" 				0	// Emote Key | F3 -> For keyboard with F3 keys | 2 -> For keyboard without F3 keys
+bind_US_standard 		"4" 			"chat_wheel" 				0	// Emote Key
 bind_US_standard 		"MOUSE3" 		"+ping" 					0
 bind_US_standard 		"ENTER" 		"say_team" 					0	// Chat key
 // bind_US_standard 	"LSHIFT" 		"+pushtotalk" 				0	// Microphone key
