--- a/settings.cfg
+++ b/settings.cfg
@@ -11,7 +11,7 @@ bind_US_standard 		"y" 			"+forward" 					0
 bind_US_standard 		"h" 			"+backward" 				0
 bind_US_standard 		"g" 			"+moveleft" 				0
 bind_US_standard 		"j" 			"+moveright" 				0
-bind_US_standard 		"f" 			"+speed" 					0 	// Active sprint & Scope zoom
+bind_US_standard 		"b" 			"+speed" 					0 	// Active sprint & Scope zoom
 bind_US_standard 		"SPACE" 		"+jump" 					0
 bind_US_standard 		"MWHEELDOWN" 	"+jump" 					1
 bind_US_standard 		"c" 			"+duck" 					0
@@ -40,7 +40,7 @@ bind_US_standard        "MOUSE5"        "+scriptCommand4"           0	// Smart h
 bind_held_US_standard   "MOUSE5"        "+scriptCommand2"           0	// Medpack wheel (hold)
 bind_US_standard 		"x" 			"+scriptCommand5" 			0 	// Character Utility
 bind_US_standard 		"r" 			"weapon_inspect" 			0	// Weapon Inspection
-bind_US_standard 		"b" 			"+scriptcommand3" 			0	// Cycle Fire Mode
+bind_US_standard 		"f" 			"+scriptcommand3" 			0	// Cycle Fire Mode
 
 // communicate keybinds.
 bind_US_standard 		"4" 			"chat_wheel" 				0	// Emote Key
