--- a/settings.cfg
+++ b/settings.cfg
@@ -39,6 +39,7 @@ bind_US_standard 		"s" 			"+scriptCommand6" 			0 	// Gadget wheel
 bind_US_standard        "MOUSE5"        "+scriptCommand4"           0	// Smart heal
 bind_held_US_standard   "MOUSE5"        "+scriptCommand2"           0	// Medpack wheel (hold)
 bind_US_standard 		"z" 			"+scriptCommand5" 			0 	// Character Utility
+bind_US_standard    "6"       "+weaponCycle"          0   // Cancel Character Tactical
 bind_US_standard 		"e" 			"weapon_inspect" 			0	// Weapon Inspection
 bind_US_standard 		"d" 			"+scriptcommand3" 			0	// Cycle Fire Mode
 
