--- a/settings.cfg
+++ b/settings.cfg
@@ -68,14 +68,14 @@ m_clamp_to_window 								"0"
 // sensitivity.
 mouse_sensitivity 								"0.65"
 mouse_use_per_scope_sensitivity_scalars 		"0"
-mouse_zoomed_sensitivity_scalar_0 				"0.68"
-mouse_zoomed_sensitivity_scalar_1 				"0.68"
-mouse_zoomed_sensitivity_scalar_2 				"0.68"
-mouse_zoomed_sensitivity_scalar_3 				"0.68"
-mouse_zoomed_sensitivity_scalar_4 				"0.68"
-mouse_zoomed_sensitivity_scalar_5 				"0.68"
-mouse_zoomed_sensitivity_scalar_6 				"0.68"
-mouse_zoomed_sensitivity_scalar_7 				"0.68"
+mouse_zoomed_sensitivity_scalar_0 				"0.48" // 0.68
+mouse_zoomed_sensitivity_scalar_1 				"0.48"
+mouse_zoomed_sensitivity_scalar_2 				"0.48"
+mouse_zoomed_sensitivity_scalar_3 				"0.48"
+mouse_zoomed_sensitivity_scalar_4 				"0.48"
+mouse_zoomed_sensitivity_scalar_5 				"0.48"
+mouse_zoomed_sensitivity_scalar_6 				"0.48"
+mouse_zoomed_sensitivity_scalar_7 				"0.48"
 
 // sound.
 sv_specaccelerate 								"1000.0"
