--- a/settings.cfg
+++ b/settings.cfg
@@ -66,16 +66,16 @@ m_acceleration 									"0"
 m_clamp_to_window 								"0"
 
 // sensitivity.
-mouse_sensitivity 								"0.6" // 0.65
+mouse_sensitivity 								"0.65"
 mouse_use_per_scope_sensitivity_scalars 		"0"
-mouse_zoomed_sensitivity_scalar_0 				"0.45" // 0.68
-mouse_zoomed_sensitivity_scalar_1 				"0.45"
-mouse_zoomed_sensitivity_scalar_2 				"0.45"
-mouse_zoomed_sensitivity_scalar_3 				"0.45"
-mouse_zoomed_sensitivity_scalar_4 				"0.45"
-mouse_zoomed_sensitivity_scalar_5 				"0.45"
-mouse_zoomed_sensitivity_scalar_6 				"0.45"
-mouse_zoomed_sensitivity_scalar_7 				"0.45"
+mouse_zoomed_sensitivity_scalar_0 				"0.46" // 0.68
+mouse_zoomed_sensitivity_scalar_1 				"0.46"
+mouse_zoomed_sensitivity_scalar_2 				"0.46"
+mouse_zoomed_sensitivity_scalar_3 				"0.46"
+mouse_zoomed_sensitivity_scalar_4 				"0.46"
+mouse_zoomed_sensitivity_scalar_5 				"0.46"
+mouse_zoomed_sensitivity_scalar_6 				"0.46"
+mouse_zoomed_sensitivity_scalar_7 				"0.46"
 
 // sound.
 sv_specaccelerate 								"1000.0"
