--- a/settings.cfg
+++ b/settings.cfg
@@ -58,7 +58,8 @@ cc_linger_time 									"1.0"
 cc_predisplay_time 								"0.25"
 chroma_enable 									"0"
 func_break_max_pieces 							"0"
-gfx_nvnUseLowLatency 							"0"
+gfx_amdUseLowLatency              "1"
+gfx_nvnUseLowLatency 							"1"
 gfx_nvnUseLowLatencyBoost 						"0"
 lookspring 										"0"
 lookstrafe 										"0"
@@ -94,3 +95,4 @@ voice_mixer_volume 								"1.0"
 voice_modenable 								"1"
 voice_scale 									"1"
 voice_vox 										"1"
+
