--- a/settings.cfg
+++ b/settings.cfg
@@ -35,7 +35,7 @@ bind_US_standard 		"6" 			"weaponSelectPrimary2" 		0
 // misc keybinds.
 bind_US_standard 		"7" 			"weaponSelectOrdnance" 		0 	// Select/cycle ordnance
 bind_held_US_standard   "7"             "+strafe"                   0	// Ordnance wheel (hold)
-bind_US_standard 		"s" 			"+scriptCommand6" 			0 	// Gadget wheel
+bind_US_standard 		"s" 			"+scriptCommand6" 			0 	// Survival item wheel
 bind_US_standard        "MOUSE5"        "+scriptCommand4"           0	// Smart heal
 bind_held_US_standard   "MOUSE5"        "+scriptCommand2"           0	// Medpack wheel (hold)
 bind_US_standard 		"z" 			"+scriptCommand5" 			0 	// Character Utility
@@ -58,7 +58,7 @@ cc_linger_time 									"1.0"
 cc_predisplay_time 								"0.25"
 chroma_enable 									"0"
 func_break_max_pieces 							"0"
-gfx_amdUseLowLatency              "1"
+gfx_amdUseLowLatency              				"1"
 gfx_nvnUseLowLatency 							"1"
 gfx_nvnUseLowLatencyBoost 						"0"
 lookspring 										"0"
@@ -86,6 +86,7 @@ sv_voiceenable 									"1"
 sound_volume_voice                 				"1"  // 100% volume
 sound_num_speakers                 				"8"
 miles_channels                     				"8"
+miles_dumpuploadtime                      		"0"
 miles_output_device                 			""
 speex_quiet_threshold 						  	"1300"
 voice_input_device 								""
@@ -95,5 +96,3 @@ voice_mixer_volume 								"1.0"
 voice_modenable 								"1"
 voice_scale 									"1"
 voice_vox 										"1"
-
-
