--- a/settings.cfg
+++ b/settings.cfg
@@ -64,7 +64,7 @@ gfx_nvnUseLowLatencyBoost 						"0"
 lookspring 										"0"
 lookstrafe 										"0"
 m_acceleration 									"0"
-m_clamp_to_window 								"1"
+m_clamp_to_window 								"0"	// this makes ghub script stop working.
 
 // sensitivity.
 mouse_sensitivity 								"0.65"
@@ -96,4 +96,5 @@ voice_mixer_volume 								"1.0"
 voice_modenable 								"1"
 voice_scale 									"1"
 voice_vox 										"1"
+
 
